fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -157,7 +157,7 @@ input[type='submit']:active {
   margin-top: 1rem;
   padding: 1rem;
   /* background-color: rgb(235, 195, 64); */
-  position: fixed;
+  /* position: fixed; */
   bottom: 0;
   left: 0;
   width: 100%;
